[tool.poetry]
name = "refactornci"
version = "0.1.0"
description = ""
authors = ["ElizabethJohney0803 <127989671+ElizabethJohney0803@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
